--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@prisma/client": "^3.13.0",
         "@types/express": "^4.17.13",
+        "dotenv": "^16.0.0",
         "express": "^4.18.1",
         "nodemailer": "^6.7.5"
     }
